objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>USA_Brands__c</fullName>
        <inlineHelpText>This field identifies the Brand(s) for which this document is applicable.</inlineHelpText>
        <label>Brands</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aberlour</fullName>
                </value>
                <value>
                    <fullName>Absolut</fullName>
                </value>
                <value>
                    <fullName>Avion</fullName>
                </value>
                <value>
                    <fullName>Beefeater</fullName>
                </value>
                <value>
                    <fullName>Chivas</fullName>
                </value>
                <value>
                    <fullName>Hiram Walker</fullName>
                </value>
                <value>
                    <fullName>Jameson</fullName>
                </value>
                <value>
                    <fullName>Midleton</fullName>
                </value>
                <value>
                    <fullName>Kahlua</fullName>
                </value>
                <value>
                    <fullName>Malibu</fullName>
                </value>
                <value>
                    <fullName>Martell</fullName>
                </value>
                <value>
                    <fullName>Olmeca Altos</fullName>
                </value>
                <value>
                    <fullName>Pernod</fullName>
                </value>
                <value>
                    <fullName>Plymouth</fullName>
                </value>
                <value>
                    <fullName>Powers</fullName>
                </value>
                <value>
                    <fullName>Redbreast</fullName>
                </value>
                <value>
                    <fullName>Ricard</fullName>
                </value>
                <value>
                    <fullName>Royal Salute</fullName>
                </value>
                <value>
                    <fullName>Seagram&apos;s Gin</fullName>
                </value>
                <value>
                    <fullName>The Glenlivet</fullName>
                </value>
                <value>
                    <fullName>Brancott Estate</fullName>
                </value>
                <value>
                    <fullName>Campo Viejo</fullName>
                </value>
                <value>
                    <fullName>Dead Bolt</fullName>
                </value>
                <value>
                    <fullName>G.H. Mumm</fullName>
                </value>
                <value>
                    <fullName>Graffigna</fullName>
                </value>
                <value>
                    <fullName>Jacob&apos;s Creek</fullName>
                </value>
                <value>
                    <fullName>Mumm Napa</fullName>
                </value>
                <value>
                    <fullName>Perrier-Jouet</fullName>
                </value>
                <value>
                    <fullName>Sandeman</fullName>
                </value>
                <value>
                    <fullName>Stoneleigh</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>USA_Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Spirits</fullName>
                </value>
                <value>
                    <fullName>Wines</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>USA_Content_Type__c</fullName>
        <inlineHelpText>Larry, enter the type of content (e.g. Sell Sheet, Calendar, etc.) here please.</inlineHelpText>
        <label>Content Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Awards</fullName>
                </value>
                <value>
                    <fullName>Best Practices</fullName>
                </value>
                <value>
                    <fullName>Brand Standards</fullName>
                </value>
                <value>
                    <fullName>Calendar</fullName>
                </value>
                <value>
                    <fullName>Chains</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Help</fullName>
                </value>
                <value>
                    <fullName>Job Aids</fullName>
                </value>
                <value>
                    <fullName>KPI Standards</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Multicultural</fullName>
                </value>
                <value>
                    <fullName>Podcasts</fullName>
                </value>
                <value>
                    <fullName>POS</fullName>
                </value>
                <value>
                    <fullName>Presentations</fullName>
                </value>
                <value>
                    <fullName>Priority Programs</fullName>
                </value>
                <value>
                    <fullName>Programs</fullName>
                </value>
                <value>
                    <fullName>Quick Reads</fullName>
                </value>
                <value>
                    <fullName>Recipes</fullName>
                </value>
                <value>
                    <fullName>Sales Deck</fullName>
                </value>
                <value>
                    <fullName>Sell Sheets</fullName>
                </value>
                <value>
                    <fullName>Shelf Sets</fullName>
                </value>
                <value>
                    <fullName>Shopper Insights</fullName>
                </value>
                <value>
                    <fullName>Specs</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Videos</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>USA_Other_Products__c</fullName>
        <label>Other Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Test Other Product</fullName>
                </value>
                <value>
                    <fullName>Brand Standards Level 2</fullName>
                </value>
                <value>
                    <fullName>Killer Facts</fullName>
                </value>
                <value>
                    <fullName>Acronyms</fullName>
                </value>
                <value>
                    <fullName>Movember-H1</fullName>
                </value>
                <value>
                    <fullName>Home for the Holidays</fullName>
                </value>
                <value>
                    <fullName>Calendars</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>Category Insights: Vodka</fullName>
                </value>
                <value>
                    <fullName>Category Insights: Rum</fullName>
                </value>
                <value>
                    <fullName>Category Insights: Whiskey</fullName>
                </value>
                <value>
                    <fullName>Category Insights: Scotch</fullName>
                </value>
                <value>
                    <fullName>Category Insights: Tequila</fullName>
                </value>
                <value>
                    <fullName>Category Insights: Gin</fullName>
                </value>
                <value>
                    <fullName>Category Insights: Cordial</fullName>
                </value>
                <value>
                    <fullName>Insights: Champagne / Sparkling Wine</fullName>
                </value>
                <value>
                    <fullName>Insights: Still Wine</fullName>
                </value>
                <value>
                    <fullName>Insights: Fortified Wine</fullName>
                </value>
                <value>
                    <fullName>WA</fullName>
                </value>
                <value>
                    <fullName>PA</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>North CA</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>On-Premise</fullName>
                </value>
                <value>
                    <fullName>South CA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>Jameson SPD</fullName>
                </value>
                <value>
                    <fullName>Lillet Products</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>USA_Products__c</fullName>
        <inlineHelpText>This field identifies the Products or Sub-Brands to which this content is applicable.</inlineHelpText>
        <label>Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Aberlour 12 YO Double Cask</fullName>
                </value>
                <value>
                    <fullName>Aberlour 12 YO Non Chill Filter</fullName>
                </value>
                <value>
                    <fullName>Aberlour 16 YO</fullName>
                </value>
                <value>
                    <fullName>Aberlour 18 YO</fullName>
                </value>
                <value>
                    <fullName>Aberlour A&apos;Bunadh</fullName>
                </value>
                <value>
                    <fullName>Absolut 100</fullName>
                </value>
                <value>
                    <fullName>Absolut Apeach</fullName>
                </value>
                <value>
                    <fullName>Absolut Apple</fullName>
                </value>
                <value>
                    <fullName>Absolut Berri Acai</fullName>
                </value>
                <value>
                    <fullName>Absolut Cherrys</fullName>
                </value>
                <value>
                    <fullName>Absolut Chicago</fullName>
                </value>
                <value>
                    <fullName>Absolut Cilantro</fullName>
                </value>
                <value>
                    <fullName>Absolut Citron</fullName>
                </value>
                <value>
                    <fullName>Absolut Elyx</fullName>
                </value>
                <value>
                    <fullName>Absolut Family</fullName>
                </value>
                <value>
                    <fullName>Absolut Hibiskus</fullName>
                </value>
                <value>
                    <fullName>Absolut Kurant</fullName>
                </value>
                <value>
                    <fullName>Absolut Mandrin</fullName>
                </value>
                <value>
                    <fullName>Absolut Mango</fullName>
                </value>
                <value>
                    <fullName>Absolut Mexico</fullName>
                </value>
                <value>
                    <fullName>Absolut Pears</fullName>
                </value>
                <value>
                    <fullName>Absolut Peppar</fullName>
                </value>
                <value>
                    <fullName>Absolut Raspberri</fullName>
                </value>
                <value>
                    <fullName>Absolut Ruby Red</fullName>
                </value>
                <value>
                    <fullName>Absolut Texas</fullName>
                </value>
                <value>
                    <fullName>Absolut Vanilia</fullName>
                </value>
                <value>
                    <fullName>Absolut Vodka</fullName>
                </value>
                <value>
                    <fullName>Absolut Wild Tea</fullName>
                </value>
                <value>
                    <fullName>Artist Series</fullName>
                </value>
                <value>
                    <fullName>Avion Anejo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>USA_Spirits_Products__c</fullName>
        <label>Spirits Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Test Spirit Product</fullName>
                </value>
                <value>
                    <fullName>Chivas Regal Extra</fullName>
                </value>
                <value>
                    <fullName>Glenlivet Guardians Chapter</fullName>
                </value>
                <value>
                    <fullName>Glenlivet Oloroso</fullName>
                </value>
                <value>
                    <fullName>Pernod Absinthe</fullName>
                </value>
                <value>
                    <fullName>Kahlua Salted Caramel</fullName>
                </value>
                <value>
                    <fullName>Malibu Peaches &amp; Cream</fullName>
                </value>
                <value>
                    <fullName>Yellow Spot Products</fullName>
                </value>
                <value>
                    <fullName>Oak by Absolut</fullName>
                </value>
                <value>
                    <fullName>Martell L&apos;OR</fullName>
                </value>
                <value>
                    <fullName>Absolut Grape</fullName>
                </value>
                <value>
                    <fullName>Jameson Caskmates</fullName>
                </value>
                <value>
                    <fullName>Founders Reserve</fullName>
                </value>
                <value>
                    <fullName>Kitsune</fullName>
                </value>
                <value>
                    <fullName>Nadurra First Fill</fullName>
                </value>
                <value>
                    <fullName>Nadurra Peated</fullName>
                </value>
                <value>
                    <fullName>Movember-H1</fullName>
                </value>
                <value>
                    <fullName>Mule-H1</fullName>
                </value>
                <value>
                    <fullName>Holiday Nights Electrik</fullName>
                </value>
                <value>
                    <fullName>5 Golden Rules</fullName>
                </value>
                <value>
                    <fullName>Home for the Holidays</fullName>
                </value>
                <value>
                    <fullName>Holiday Hook Up</fullName>
                </value>
                <value>
                    <fullName>Chivas Holiday</fullName>
                </value>
                <value>
                    <fullName>TGL Holiday</fullName>
                </value>
                <value>
                    <fullName>Avion Holiday</fullName>
                </value>
                <value>
                    <fullName>Midleton An Dair</fullName>
                </value>
                <value>
                    <fullName>Green Spot Leoville</fullName>
                </value>
                <value>
                    <fullName>Malibu Strawberry Kiwi</fullName>
                </value>
                <value>
                    <fullName>Malibu Pineapple Upside Down Cake</fullName>
                </value>
                <value>
                    <fullName>Chivas Ultis</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>USA_Wines_Products__c</fullName>
        <label>Wines Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Test Wine Product</fullName>
                </value>
                <value>
                    <fullName>Sell Sheets &amp; Infographics</fullName>
                </value>
                <value>
                    <fullName>Accolades</fullName>
                </value>
                <value>
                    <fullName>Brand History &amp; Education</fullName>
                </value>
                <value>
                    <fullName>Product Specs</fullName>
                </value>
                <value>
                    <fullName>Images</fullName>
                </value>
                <value>
                    <fullName>Perrier-Jouet Grand Brut</fullName>
                </value>
                <value>
                    <fullName>Perrier-Jouet Blason Rose</fullName>
                </value>
                <value>
                    <fullName>Perrier-Jouet Belle Epoque Blanc de Blancs</fullName>
                </value>
                <value>
                    <fullName>GH Mumm Cordon Rouge</fullName>
                </value>
                <value>
                    <fullName>GH Mumm Brut Rose</fullName>
                </value>
                <value>
                    <fullName>GH Mumm Blanc de Blancs</fullName>
                </value>
                <value>
                    <fullName>GH Mumm Cuvee R Lalou</fullName>
                </value>
                <value>
                    <fullName>Mumm Napa Brut Prestige</fullName>
                </value>
                <value>
                    <fullName>Mumm Napa Brut Rose</fullName>
                </value>
                <value>
                    <fullName>Mumm Napa Cuvee M</fullName>
                </value>
                <value>
                    <fullName>Mumm Napa Blanc de Blancs</fullName>
                </value>
                <value>
                    <fullName>Mumm Napa DVX</fullName>
                </value>
                <value>
                    <fullName>Brancott Estate Classics Sauvignon Blanc</fullName>
                </value>
                <value>
                    <fullName>Brancott Estate Classics Pinot Noir</fullName>
                </value>
                <value>
                    <fullName>Brancott Estate Classics Pinot Grigio</fullName>
                </value>
                <value>
                    <fullName>Brancott Estate Flight Song Sauvignon Blanc</fullName>
                </value>
                <value>
                    <fullName>Brancott Estate Flight Song Pinot Grigio</fullName>
                </value>
                <value>
                    <fullName>Brancott Estate Letter Series Letter B</fullName>
                </value>
                <value>
                    <fullName>Brancott Estate Letter Series Letter T</fullName>
                </value>
                <value>
                    <fullName>Campo Viejo Tempranillo</fullName>
                </value>
                <value>
                    <fullName>Campo Viejo Garnacha</fullName>
                </value>
                <value>
                    <fullName>Campo Viejo Reserva</fullName>
                </value>
                <value>
                    <fullName>Campo Viejo Gran Reserva</fullName>
                </value>
                <value>
                    <fullName>Campo Viejo Cava Brut Reserva</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>gvp__Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <referenceTo>gvp__Brand__c</referenceTo>
        <relationshipLabel>Content</relationshipLabel>
        <relationshipName>Content</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__Label__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Label</label>
        <referenceTo>gvp__Label__c</referenceTo>
        <relationshipLabel>Content</relationshipLabel>
        <relationshipName>Content</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__Objective_Creator_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Objective Plan</label>
        <referenceTo>gvp__Objective_Creator_Template__c</referenceTo>
        <relationshipLabel>Content</relationshipLabel>
        <relationshipName>Content</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__Product_Name__c</fullName>
        <formula>BLANKVALUE(gvp__Label__r.Name, BLANKVALUE(gvp__Brand__r.Name, &apos;&apos;))</formula>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Presentation</fullName>
                    <default>true</default>
                    <label>Presentation</label>
                </value>
                <value>
                    <fullName>Brand Standards</fullName>
                </value>
                <value>
                    <fullName>Sell Sheet</fullName>
                </value>
                <value>
                    <fullName>Recipe Sheet</fullName>
                </value>
                <value>
                    <fullName>Shelf Talker</fullName>
                </value>
                <value>
                    <fullName>Product Review</fullName>
                </value>
                <value>
                    <fullName>Media Related</fullName>
                </value>
                <value>
                    <fullName>Brochure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>Corby_Digital_Assets</fullName>
        <active>true</active>
        <label>Corby Digital Assets</label>
    </recordTypes>
    <recordTypes>
        <fullName>USA_Spirits1</fullName>
        <active>true</active>
        <label>USA Spirits</label>
    </recordTypes>
</CustomObject>